# wlroots-rs

./: .gitmodules  .rustfmt.toml  Cargo.toml
examples/: tinywl.rs
src/: allocator.rs  backend.rs  compositor.rs  data_device_manager.rs  lib.rs  output.rs  output_layout.rs  renderer.rs  scene.rs  subcompositor.rs  xdg_shell.rs
wlroots-codegen/: Cargo.toml
wlroots-codegen/src/: main.rs
wlroots-sys/: Cargo.toml  build.rs  wlroots.h
wlroots-sys/src/: lib.rs
