[package]
name = "wlroots"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["wlroots-sys"]

[dependencies]
libc = "0.2.147"
memoffset = "0.9.0"
thin_trait_object = "1.1.2"
thiserror = "1.0.43"
wayland-backend = { version = "0.1.2", features = ["server_system"] }
wayland-server = "0.30"
wayland-sys = "0.30"
wlroots-sys = { path = "wlroots-sys" }

[dev-dependencies]
anyhow = "1.0.71"
anymap = "0.12.1"
slotmap = "1.0.6"
