[package]
name = "wlroots-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.1"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.2"

[dev-dependencies]
tree-sitter-cli = "0.20.8"
