[package]
name = "wlroots-sys"
version = "0.1.0"
authors = ["Colin Marc <hi@colinmarc.com>"]
description = "Low-level bindings for wlroots, a popular library for writing Wayland compositors"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"

build = "build.rs"

[build-dependencies]
bindgen = "0.66"
meson-next = "1.2.2"
system-deps = "6.1"

[dependencies]
libc = "0.2"
libudev-sys = "0.1"
wayland-sys = { version = "0.30", features = ["server", "client"] }

[package.metadata.system-deps]
wayland-server = "1.21"
wayland-protocols = "1.31"
libdrm = "2.4"
hwdata = "0.367"
pixman-1 = "0.42"
libseat = "0.7"
libudev = "252"
xkbcommon = "1.5"
